--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "biffbangpow-elementmodule-template",
+  "name": "biffbangpow-calltoaction-element",
   "version": "1.0.0",
-  "description": "Module skeleton for BBP elements",
+  "description": "BBP call to action element",
   "scripts": {
     "build": "yarn && yarn lint && NODE_ENV=production webpack -p --bail --progress",
     "dev": "NODE_ENV=development webpack --progress",
@@ -10,21 +10,7 @@
     "lint": "eslint client/src; sass-lint -v",
     "lint-js-fix": "eslint client/src --fix"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/silverstripe/silverstripe-elemental-bannerblock.git"
-  },
-  "keywords": [
-    "silverstripe",
-    "elemental",
-    "content blocks"
-  ],
-  "author": "SilverStripe Ltd",
   "license": "BSD-3-Clause",
-  "bugs": {
-    "url": "https://github.com/silverstripe/silverstripe-elemental-bannerblock/issues"
-  },
-  "homepage": "https://github.com/silverstripe/silverstripe-elemental-bannerblock#readme",
   "dependencies": {
     "classnames": "^2.2.5",
     "jquery": "^3.5.0",
@@ -52,7 +38,6 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.3.0",
-    "jest-cli": "^23.6.0",
     "webpack": "^2.6.1"
   },
   "babel": {
