Update Elemental dependency

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   "require": {
     "silverstripe/vendor-plugin": "^1.0",
     "silverstripe/cms": "^4",
-    "dnadesign/silverstripe-elemental": "^4@stable",
+    "dnadesign/silverstripe-elemental": "^4@stable || ^3@stable",
     "sheadawson/silverstripe-linkable": "^2.0"
   },
   "autoload": {
